--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -40,10 +40,10 @@
                     input.removeAttribute('disabled');
                 });
 
-                centrifuge.on('message', function(data) {
-                    drawText('Message: ' + JSON.stringify(data));
+                centrifuge.on('message', function(ctx) {
+                    drawText('Message: ' + JSON.stringify(ctx.data));
                     // Echo data back to server.
-                    centrifuge.send(data);
+                    centrifuge.send(ctx.data);
                 });
 
                 centrifuge.on('publication', function(ctx) {
