update all bidi examples

--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -86,7 +86,7 @@
                 // subscribe on channel and bind various event listeners. Actual
                 // subscription request will be sent after client connects to
                 // a server.
-                const sub = centrifuge.newSubscription(channel)
+                const sub = centrifuge.newSubscription(channel);
 
                 sub.on("publication", handlePublication)
                     .on("join", handleJoin)
