--- a/_examples/concurrency/index.html
+++ b/_examples/concurrency/index.html
@@ -6,7 +6,7 @@
         <style type="text/css">
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/centrifuge/3.0.0-beta.0/centrifuge.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/centrifuge@3.0.0/dist/centrifuge.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
