--- a/_examples/chat_oauth2/index.html
+++ b/_examples/chat_oauth2/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Centrifuge + OAuth2</title>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/centrifuge/3.0.0-beta.0/centrifuge.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/centrifuge@3.0.0/dist/centrifuge.js"></script>
     </head>
     <body>
         <div>
