--- a/_examples/gin_auth/chat.html
+++ b/_examples/gin_auth/chat.html
@@ -7,7 +7,7 @@
         input[type="text"] {width: 300px;}
         .muted {color: #CCCCCC;font-size: 10px;}
     </style>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/centrifuge/3.0.0-beta.0/centrifuge.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/centrifuge@3.0.0/dist/centrifuge.js"></script>
     <script type="text/javascript">
         // helper functions to work with escaping html.
         const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
