--- a/_examples/user_subscribe_unsubscribe/index.html
+++ b/_examples/user_subscribe_unsubscribe/index.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         input[type="text"] { width: 300px; }
     </style>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/centrifuge/3.0.0-beta.0/centrifuge.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/centrifuge@3.0.0/dist/centrifuge.js"></script>
     <script type="text/javascript">
         const channel = "blink182";
 
